--- a/blog2.html
+++ b/blog2.html
@@ -124,7 +124,7 @@ Well this website has many attractive templates for resume and the exciting part
         </div>
         <br>
         <div class="images">
-            <img src="./assets/Blog1-1.jpeg" alt="">
+            <img src="./assets/b2/3.png" alt="">
         </div>
         <br>
         <div class="sub-heading">
