--- a/blog2.html
+++ b/blog2.html
@@ -128,7 +128,7 @@ Well this website has many attractive templates for resume and the exciting part
         </div>
         <br>
         <div class="sub-heading">
-            4. <a href="https://hotpot.ai/
+            4. <a href="https://panzoid.com/
             "><u>Panzoid</u></a>
         </div>
         <div class="content">
