--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
           environment and interact with the Chrome ...
         </div>
         <div class="read">
-          <button onclick="myFunction()">Read More...</button>
+          <a href="./blog3.html">
+            <button >Read More...</button>
+          </a>
         </div>
         <hr />
         <h3>
